Bug 60784 - iframe sandbox doesn't properly block popups
Summary: iframe sandbox doesn't properly block popups
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Adam Barth
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-13 12:08 PDT by Adam Barth
Modified: 2011-05-13 14:44 PDT (History)
3 users (show)

See Also:


Attachments
Patch (5.14 KB, patch)
2011-05-13 12:10 PDT, Adam Barth
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Barth 2011-05-13 12:08:55 PDT
iframe sandbox doesn't properly block popups
Comment 1 Adam Barth 2011-05-13 12:10:35 PDT
Created attachment 93489 [details]
Patch
Comment 2 Eric Seidel (no email) 2011-05-13 12:12:17 PDT
Comment on attachment 93489 [details]
Patch

OK.
Comment 3 WebKit Commit Bot 2011-05-13 14:43:04 PDT
The commit-queue encountered the following flaky tests while processing attachment 93489 [details]:

http/tests/xmlhttprequest/remember-bad-password.html bug 51733 (author: ap@webkit.org)
The commit-queue is continuing to process your patch.
Comment 4 WebKit Commit Bot 2011-05-13 14:44:22 PDT
Comment on attachment 93489 [details]
Patch

Clearing flags on attachment: 93489

Committed r86462: <http://trac.webkit.org/changeset/86462>
Comment 5 WebKit Commit Bot 2011-05-13 14:44:28 PDT
All reviewed patches have been landed.  Closing bug.