2011-05-13  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        iframe sandbox doesn't properly block popups
        https://bugs.webkit.org/show_bug.cgi?id=60784

        Test that we block popup windows from inside sandbox.

        * http/tests/security/no-popup-from-sandbox-expected.txt: Added.
        * http/tests/security/no-popup-from-sandbox-top-expected.txt: Added.
        * http/tests/security/no-popup-from-sandbox-top.html: Added.
        * http/tests/security/no-popup-from-sandbox.html: Added.
2011-05-13  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        iframe sandbox doesn't properly block popups
        https://bugs.webkit.org/show_bug.cgi?id=60784

        Previously, we weren't implementing this requirement from the spec:

        "This flag also prevents content from creating new auxiliary browsing
        contexts, e.g. using the target attribute or the window.open() method."

        Tests: http/tests/security/no-popup-from-sandbox-top.html
               http/tests/security/no-popup-from-sandbox.html

        * loader/PolicyChecker.cpp:
        (WebCore::PolicyChecker::checkNewWindowPolicy):

Canonical link: https://commits.webkit.org/76117@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86462 268f45cc-cd09-0410-ab3c-d52691b4dbfc